--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <a href="arrest" style="background-image: url('images/sparkle.gif');"><strong>/arrest</strong></a><br>
         </h3>
         <h3 style="text-shadow: 0 0 0.40em #FFFFFF;">
-            <a href="manifest" style="background-image: url('images/sparkle.gif');"><strong>/manifest</strong></a><br>
+            <a href="vanity" style="background-image: url('images/sparkle.gif');"><strong>/vanity</strong></a><br>
         </h3>
         <h3 style="text-shadow: 0 0 0.40em #FFFFFF;">
             <a href="hostage" style="background-image: url('images/sparkle.gif');"><strong>/hostage</strong></a><br>
