Update and rename manifest.html to vanity.html

--- a/vanity.html
+++ b/vanity.html
@@ -16,7 +16,7 @@
     <link href="css/fbi.css" rel="stylesheet">
     <link href="css/hostage.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="images/dia.gif">
-    <title>@manifest - #HARM</title>
+    <title>@vanity - #HARM</title>
 </head>
 
 <body style="margin: 0; overflow: hidden;">
@@ -42,11 +42,11 @@
                         <img src="images/be1e0f73a4dc1ed0814b3763efda98cf.png">
                     </div>
                     <div class="username">
-                        <a class="sparkles">manifest</a>
+                        <a class="sparkles">vanity</a>
                     </div>
 
                     <div class="status">
-                        <a id="typewriter" class="typewriter">manifest x prod</a>
+                        <a id="typewriter" class="typewriter">vanity x prod</a>
                     </div>
 
                     <div class="badges-container">
